--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 }</style></div></div><div id="crisp-chatbox" lang="en" dir="ltr" translate="no" tabindex="-1" class="cc-tlyw" data-hidden="false" data-force-show="false" data-availability="away" data-lock-maximized="false" data-website-logo="false" data-last-operator-face="true" data-ongoing-operator-face="false" data-availability-tooltip="true" data-hide-vacation="false" data-blocked="false" data-mobile-view="true" data-full-view="true" data-small-view="true" data-large-view="false" data-has-local-messages="false" data-was-availability-online="false" data-is-activity-ongoing="false" data-hide-on-away="false" data-hide-on-mobile="false" data-position-reverse="false"><div class="cc-kxkl cc-14b7"><a data-maximized="false" data-is-failure="false" class="cc-nsge" tabindex="0" role="button" aria-label="Open chat" data-pane-animate-entrance="false"><span class="cc-ujvn"><!--v-if--></span><span class="cc-imbb cc-qfnu"><span data-id="chat_closed" data-is-ongoing="false" class="cc-11f2"><span class="cc-15e7"><span class="cc-1d2k cc-18ij"><span class="cc-ci26 cc-4yys" style="background-image: url(&quot;https://image.crisp.chat/process/thumbnail/?url=https%3A%2F%2Fstorage.crisp.chat%2Fusers%2Favatar%2Foperator%2F656a08af7d8c7400%2Fassistant_6lc5zg.png&amp;width=240&amp;height=240&amp;1710245800143&quot;) !important;"></span></span></span></span></span></a></div></div></div><iframe id="verify-api" src="https://verify.walletconnect.org/dcd7898c9be870617b80489dc9e32469" style="display: none;"></iframe>
 
 
-
+<script defer src="/_vercel/insights/script.js"></script>
 
 <script>
   var timer = setTimeout(function() {
